--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -8,15 +8,19 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
 
     steps:
       - uses: actions/checkout@v3
 
-      - name: Login to Docker Hub
+      - name: Login to GitHub Container Registry
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
@@ -40,8 +44,8 @@ jobs:
         with:
           push: true
           tags: |
-            mfreudenberg/coffee-ctl:latest
-            mfreudenberg/coffee-ctl:${{ env.FULL_IMAGE_TAG }}
+            ghcr.io/washed/coffee-ctl:latest
+            ghcr.io/washed/coffee-ctl:${{ env.FULL_IMAGE_TAG }}
           platforms: |
             linux/amd64
             linux/arm64
@@ -52,8 +56,8 @@ jobs:
         with:
           push: true
           tags: |
-            mfreudenberg/coffee-ctl:${{ env.MAJOR_IMAGE_TAG }}
-            mfreudenberg/coffee-ctl:${{ env.MINOR_IMAGE_TAG }}
+            ghcr.io/washed/coffee-ctl:${{ env.MAJOR_IMAGE_TAG }}
+            ghcr.io/washed/coffee-ctl:${{ env.MINOR_IMAGE_TAG }}
           platforms: |
             linux/amd64
             linux/arm64
