configure gin mode and port

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,6 +12,8 @@ services:
       MQTT_BROKER_USERNAME:
       MQTT_BROKER_PASSWORD:
       REDIS_URL:
+      GIN_MODE: release
+      PORT: 8080
     ports:
       - "8080:8080"
     depends_on:
